# django-oauth

./: db.sqlite3  pyproject.toml  readme.md  requirements.txt
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py
projeto/: settings.py  urls.py
